--- a/www/ficha/style.css
+++ b/www/ficha/style.css
@@ -103,6 +103,18 @@ body {
 }
 
 .bloque-4 .item { width: 23%; }
+.bloque-1 {
+  max-width: 30%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.bloque-1 .item { width: 100%; }
+.bloque-2 {
+  max-width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.bloque-2 .item { width: 48%; }
 .bloque-3 {
   max-width: 70%;
   margin-left: auto;
